# cyntatic

./: CMakeLists.txt  README.md  grammar.ebnf
include/: allocator.h  args.h  buffer.h  common.h  e4c.h  encoding.hpp  file.h  map.h  stream.h  tree.h  vector.h  view.h
include/asm/: asm.h  asm.hpp
include/compiler/: ast.h  ast.hpp  compile.h  heap.h  ident.h  init.h  lexer.h  lexer.hpp  log.h  parser.h  source.h  symbol.hpp  timer.h  token.h  token.hpp  type.h  typecheck.hpp  types.hpp  utils.hpp  vistor.hpp
include/compiler-cpp/: log.hpp  node.hpp  source.hpp  symbol.hpp  token.hpp  type.hpp  utils.hpp  value.hpp  visitor.hpp
include/compiler/asm/: asm.h
include/compiler/common/: heap.h  ident.h  itp.h  lexer.h  log.h  source.h  timer.h  token.h
include/vm/: assembler.hpp  builder.h  builtins.h  instr.h  value.h  vm.h
src/: allocator.c  args.c  buffer.c  common.c  e4c.c  file.c  map.c  stream.c  tree.c  vector.c
src/asm/: asm.c  asm.cpp  main.c
src/asm-2/: asm.cpp  main.c
src/asm/examples/: args.acyn  hello.acyn  read.acyn
src/assembler/: halt.acyn  impl.cpp  impl.h  main.c  main.cpp
src/compiler/: ast.cpp  codegen.c  compile.c  encoding.cpp  example.cyn  heap.c  ident.c  lexer.c  lexer.cpp  log.c  log.cpp  main.c  main.cpp  parser.c  source.c  source.cpp  symbol.cpp  timer.c  token.c  token.cpp  type.c  typecheck.cpp  types.cpp  utils.cpp
src/compiler-cpp/: node.cpp  symbol.cpp  token.cpp  type.cpp
src/compiler/asm/: asm.c  main.c
src/compiler/asm/examples/: hello.acyn
src/compiler/common/: heap.c  ident.c  init.c  itp.c  lexer.c  log.c  source.c  timer.c  token.c
src/vm/: assembler.cpp  builder.c  builtins.c  code.c  main.c  memory.c  utils.c  vm.c
tests/: main.cpp  shared.cpp
tests/lang/: main.cpp
